--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,17 @@
 body {
-  background-image: url("fuckYou.png");
-  background-color: #cccccc;
+  background-image: linear-gradient(180deg, rgb(195, 0, 255), rgb(255, 0, 170));
 }
 
 h1 {
   font-family: Monaco;
-  color: white;
+  color:black;
   text-align: center;
 }
 
 p {
   font-family: Monaco;
   font-size: 20px;
-  color: white;
+  color:black;
   text-indent: 40px;
 }
 
@@ -20,6 +19,6 @@ p {
 ul{
  font-family: Monaco;
   font-size: 20px;
-  color: white;
+  color: black;
   margin-left: 40px
 }
